--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap');
 
 * {
     font-family: 'Comfortaa', cursive;
@@ -59,7 +60,7 @@ body {
 }
 
 .couple-names {
-    font-family: 'Great Vibes', cursive;
+    font-family: 'Pinyon Script', cursive;
     font-size: 4em;
     margin-top: 90px;
     color: white;
